[tool.pytest.ini_options]
pythonpath = "."

[tool.poetry]
name = "snout"
version = "0.1.0"
description = "Social Network Scout"
authors = ["Andrey Alekseev <leksus@leksus.info>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
alembic = "1.14.0"
annotated-types = "0.7.0"
mako = "1.3.6"
markupsafe = "3.0.2"
psycopg2 = "2.9.10"
pydantic = "2.9.2"
pydantic-settings = "2.6.1"
pydantic-core = "2.23.4"
python-dotenv = "1.0.1"
sqlalchemy = "2.0.36"
typing-extensions = "4.12.2"
httpx = "^0.28.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
